syntax = "proto3";

package cart;

option go_package = "/proto";

service Cart {
    rpc GetCart(GetCartRequest) returns (GetCartResponse);
    rpc GetCartIdByUserId(GetCartIdByUserIdRequest) returns(GetCartIdByUserIdReponse);
    rpc RemoveCart(RemoveCartRequest) returns (RemoveCartResponse);
}


message GetCartIdByUserIdRequest {
    uint64 user_id = 1;
}

message GetCartIdByUserIdReponse {
    uint64 cart_id = 1;
}


message GetCartRequest {
    uint64 cart_id = 1;
}

message GetCartResponse {
    uint64 id = 1;
    uint64 user_id = 2;
    repeated CartItem items = 3;
}

message CartItem {
    uint64 id = 1;
    uint64 cart_id = 2;
    uint64 item_id = 3;
    string type = 4; 
    uint32 quantity = 6;
}

message RemoveCartRequest {
    uint64 cart_id = 1;
}

message RemoveCartResponse {
}